--- a/.gitignore
+++ b/.gitignore
@@ -26,13 +26,12 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Dependency Directories
 node_modules/
 jspm_packages/
 
-# Build Output
+# Build Output (if using build tools)
 dist/
 build/
 out/
@@ -53,23 +52,11 @@ temp/
 # Backup Files
 *.bak
 *.backup
-*~
 
-# Package Manager Files
+# Vercel
+.vercel
+
+# Package Manager Files (if added later)
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-ENV/
-env/
-
-# Misc
-.vercel
-.netlify
